--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -1,23 +1,3 @@
-// // dataset dataset view
-// 	.tools{
-// 		padding: 0;
-// 		margin: 0;
-// 		display:block;
-// 		width: 100%;
-// 		background: rgba(217, 217, 217, 0.82);
-// 		border-bottom: 1px solid #ddd;
-
-// 		.tool {	
-// 			text-align: center;
-// 			width: 70px;
-// 			float: left;
-// 			display: block;
-// 			overflow:hidden;
-
-
-
-
-
 .dataset {
 
 	h3.metaheader{
@@ -139,94 +119,42 @@
 						float: left;
 						display:block;
 						margin-right:5px;
-						width: 70px;
+						width: auto;
 						text-align: center;
-						padding:0;
+						display: inline-block;
 					}
+					.edit-file{
+						padding:0 2px;
+					}
+					.download-file, 
 					.delete-file{
-						width: 50px;
-						display: inline-block;
 						overflow:hidden;
-						padding-top: 1px;
+						padding-top: 1px 0 0;
 						margin-left: 5px;
-						button{
-							padding: 2px 5px;
-							margin: 0;
+						.btn-warn-component{
 							font-size: 11px;
 							line-height: 10px;
-							&.delete{
-								margin-right: 5px;
-							}
 							&.warning{
-								padding: 0;
-							&.btn-admin i{margin-left:0;}	
+								padding: 2px;
+								i{
+									margin-left:0;
+									line-height: 0;
+								}	
 							}
+							&.cancel,
+							&.delete,
+							&.success{
+								color:#fff;
+								font-size: 10px;
+								padding: 0 2px;
+								width: 15px;
+								margin: 0 5px 0 0;
+								line-height: 10px;
+								display: inherit;
+							}
+						}
+					}
 
-								&.cancel,
-								&.delete,
-								&.success{
-									background: $brand-danger;
-									color:#fff;
-									font-size: 13px;
-									padding: 2px;
-									width: 18px;
-									margin: 0 5px 0 0;
-									line-height: 10px;
-									&:hover{
-										background:darken($brand-danger, 10%);
-									}
-								}
-								&.delete,
-								&.success{
-									background: $brand-success;
-									&:hover{
-										background:darken($brand-success, 10%);
-									}
-								}
-						}
-					}
-					
-					.download-file{
-					    text-align: left;
-					    margin-left: 5px;
-						float: left;
-						width: 90px;
-						display: inline-block;
-						overflow:hidden;
-						padding-top: 1px;
-						.warning-loading{
-							margin-top:0;
-							display: block;
-							float: left;
-						}
-						button,
-						a{
-							padding: 2px 5px;
-							margin: 0;
-							font-size: 11px;
-							line-height: 10px;
-								&.cancel,
-								&.success{
-									background: $brand-danger;
-									color:#fff;
-									font-size: 13px;
-									padding: 2px;
-									width: 18px;
-									margin: 0 5px 0 0;
-									line-height: 10px;
-									&:hover{
-										background:darken($brand-danger, 10%);
-									}
-								}
-								&.success{
-									background: $brand-success;
-									&:hover{
-										background:darken($brand-success, 10%);
-									}
-								}
-							&.btn-admin i{margin-left:0;}	
-						}
-					}
 
 				}
 
@@ -354,39 +282,30 @@
 	    .file-array-btn{
 			width: 50px;
 			overflow: hidden;
+			float: left;
+			text-align: center;
+			padding: 0;
+    	}
+		.btn-warn-component{
+			padding: 2px 5px;
+			margin: 0;
+			font-size: 13px;
+			line-height: 12px;
 			display: inline-block;
-			text-align:center;
-	    }
-	    span.btn-group,
-	    span.fadeIn{
-			button,
-			a{
-				padding: 2px 5px;
-				margin: 0;
-				font-size: 11px;
-				line-height: 10px;
-					&.cancel,
-					&.success{
-						background: $brand-danger;
-						color:#fff;
-						font-size: 13px;
-						padding: 2px;
-						width: 18px;
-						margin: 0 5px 0 0;
-						line-height: 10px;
-						&:hover{
-							background:darken($brand-danger, 10%);
-						}
-					}
-					&.success{
-						background: $brand-success;
-						&:hover{
-							background:darken($brand-success, 10%);
-						}
-					}
-				&.btn-admin i{margin-left:0;}	
-			}
+				&.cancel,
+				&.success{
+					font-size: 12px;
+					padding: 5px 2px;
+					width: 18px;
+					margin: 0 5px 0 0;
+					line-height: 10px;
+				}
+				i{
+					line-height:0;
+					margin-left:0;
+				}
 		}
+		
 
 	}
 	.btn-wrapper{
@@ -832,11 +751,9 @@
 				backface-visibility: initial;
 			}
 
-			.btn-admin{
-					padding:10px;
-					transition: all 0.1s ease;
-					border-radius:0;
+			.btn-warn-component{
 					font-size: 18px;
+					padding:7px 0px;
 					i{
 						line-height: 30px;
 						margin-left: 0;
@@ -903,35 +820,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-// .jobs-wrap.panel-group {
-// 	margin-bottom: 0;
-// 	margin:0;
-// 	.panel-collapse{
-// 		.panel-body{
-// 			border-top:none;
-// 		}
-// 	}	
-// }
-
-
-
-
-
 .analyses{
-	
 	.jobs-wrap{
 		.jobs{	
 			border-radius: 0;
@@ -963,7 +852,6 @@
 				}
 			}
 		}
-		.metaheader{}
 		.job{
 			margin-bottom: 10px;
 			border-radius: 0;
@@ -1047,36 +935,6 @@
 						line-height: 10px;
 						vertical-align: middle;
 						font-size: 14px;
-					}
-					.btn-admin{
-						 font-size: 14px;
-					    padding: 2px 4px;
-					    line-height: 14px;
-					    margin: 0 2px;
-						i{
-							margin-left: 0;
-						}
-						&.cancel,
-						&.success{
-							background: $brand-danger;
-							color:#fff;
-						    font-size: 14px;
-						    padding: 2px 4px;
-						    line-height: 14px;
-						    margin: 0 2px;
-							&:hover{
-								background:darken($brand-danger, 10%);
-							}
-							i{
-								line-height: 15px;
-							}
-						}
-						&.success{
-							background: $brand-success;
-							&:hover{
-								background:darken($brand-success, 10%);
-							}
-						}
 					}
 				}
 			}
