--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -164,7 +164,7 @@ body.modal-open{
 
 .selectBox-style{
 	padding:5px 20px 5px 10px;
-	margin: 10px 10px 0 0;
+	margin: 10px 10px 10px 0;
 	color:black;
 	border:none;
 	outline:none;
