further cleanup for dirUpload btn

--- a/src/sass/_crn-general_BStrap_Overrides.scss
+++ b/src/sass/_crn-general_BStrap_Overrides.scss
@@ -212,25 +212,28 @@
 
 
 .edit-file{
-	width: auto;
-	font-size: 10px;
 	@extend .btn-admin;
 	@extend .admin-blue;
+	width: auto;
+	font-size: 10px;
 	position:relative;
-	width: 72px;
+	max-width: 70px;
 	display: block;
 	overflow: hidden;
+    overflow: hidden;
+    margin: 0 auto 10px;
+    padding: 10px;
+    line-height: 16px;
 	input{
-
-		position: absolute;
-		top: 0;
-		right: 0;
-		margin: 0;
-		padding: 0;
-		font-size: 20px;
-		cursor: pointer;
-		opacity: 0;
-		filter: alpha(opacity=0);
+	    position: absolute;
+	    cursor: pointer;
+	    opacity: 0;
+	    filter: alpha(opacity=0);
+	    left: 0;
+	    right: 0;
+	    bottom: 0;
+	    top: 0;
+	    width: 100%;
 	}
 }
 
@@ -272,15 +275,15 @@
     font-size: 16px;
 
 	input.dirUpload-btn{
-		position: absolute;
-		top: 0;
-		right: 0;
-		margin: 0;
-		padding: 0;
-		font-size: 20px;
-		cursor: pointer;
-		opacity: 0;
-		filter: alpha(opacity=0);
+	    position: absolute;
+	    cursor: pointer;
+	    opacity: 0;
+	    filter: alpha(opacity=0);
+	    left: 0;
+	    right: 0;
+	    bottom: 0;
+	    top: 0;
+	    width: 100%;
 	}
 }
 
