--- a/src/sass/_crn-general_BStrap_Overrides.scss
+++ b/src/sass/_crn-general_BStrap_Overrides.scss
@@ -265,6 +265,7 @@
 }
 .fileupload-btn{
 	@extend .btn-blue;
+	cursor:pointer;
     position: relative;
     overflow: hidden;
     margin: 0 auto 10px;
