updating favicon and fixing width for sort-filters

--- a/src/sass/_crn-generalwrappers.scss
+++ b/src/sass/_crn-generalwrappers.scss
@@ -196,8 +196,8 @@ body,
 		background:#f9f9f9;
 		border-bottom:1px solid #ddd;
 		.filters{
-			width: 50%;
-			float: left;
+			width: 600px;
+			float: right;
 			text-align: right;
 			padding: 0;
 			margin: 0;
@@ -251,7 +251,7 @@ body,
 		}
 	
 		.sort{
-			width: 50%;
+			width: 230px;
 			float: left;
 		    padding: 0;
 		    margin: 0;
